# juicy.pixels.ghcjs

./: CHANGELOG.md  JuicyPixels-ghcjs.cabal  README.md
src/Codec/Picture/: Bitmap.hs  InternalHelper.hs  Metadata.hs  Types.hs
test-src/: Util.hs  main.hs
