name: JuicyPixels-ghcjs
version: 0.1.0.0
cabal-version: >= 1.8
build-type: Simple
synopsis: Subset of JuicyPixels v3.3.3.1 that works with GHCJS
description: Subset of JuicyPixels v3.3.3.1 that works with GHCJS
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
copyright: 2022 Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
category: Images
extra-source-files: CHANGELOG.md

Library
  hs-source-dirs: src
  ghc-options: -O3 -Wall
  exposed-modules:
      Codec.Picture.Bitmap
    , Codec.Picture.Types
    , Codec.Picture.Metadata
    , Codec.Picture.Metadata.Exif
  other-modules:
      Codec.Picture.InternalHelper
    , Codec.Picture.VectorByteConversion
  build-depends:
      base >= 4.8.0.0
    , binary
    , bytestring
    , deepseq
    , primitive
    , vector

Test-suite imageTest
  type: exitcode-stdio-1.0
  hs-source-dirs: test-src
  Main-Is: main.hs
  Ghc-options: -O3 -Wall
  Ghc-prof-options: -rtsopts -Wall -prof -auto-all
  Include-Dirs: src/Codec/Picture
  Build-depends: base,
                 bytestring, mtl, binary, transformers,
                 vector, primitive, deepseq,
                 filepath            >= 1.3,
                 criterion           >= 1.0,
                 JuicyPixels-ghcjs
